--- a/index.html
+++ b/index.html
@@ -7,7 +7,127 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
         <!-- Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100..800&display=swap"
+            rel="stylesheet"
+        />
         <title>F8 Project 04</title>
     </head>
-    <body></body>
+    <body>
+        <!-- Header -->
+        <header class="header fixed">
+            <div class="container">
+                <figure class="header__logo">
+                    <img src="./assets/img/logo.svg" alt="Lucy" />
+                </figure>
+                <nav class="header-nav">
+                    <ul class="header-nav__list">
+                        <li class="header-nav__item header-nav__item--active">
+                            <a href="#!">Home</a>
+                        </li>
+                        <li class="header-nav__item">
+                            <a href="#!">About</a>
+                        </li>
+                        <li class="header-nav__item">
+                            <a href="#!">Services & Rates</a>
+                        </li>
+                        <li class="header-nav__item">
+                            <a href="#!">Review</a>
+                        </li>
+                        <li class="header-nav__item">
+                            <a href="#!">Contacts us</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header__action">
+                    <a href="#!" class="header__btn btn">Sign up</a>
+                </div>
+            </div>
+        </header>
+        <main>
+            <!-- Hero -->
+            <div class="hero">
+                <div class="container">
+                    <div class="hero__main-content">
+                        <figure class="hero__media">
+                            <div class="hero__thumb">
+                                <img
+                                    src="./assets/img/cat-hero.png"
+                                    alt="Cat"
+                                    class="hero__image"
+                                />
+                            </div>
+                            <div class="hero__thumb hero__thumb--2">
+                                <img
+                                    src="./assets/img/dog-hero.png"
+                                    alt="Dog"
+                                    class="hero__image"
+                                />
+                            </div>
+                            <div class="hero-card">
+                                <div class="hero-card__body">
+                                    <div class="hero-card__thumb">
+                                        <img
+                                            src="./assets/img/dog-hero-card-1.png"
+                                            alt="Dog"
+                                            class="hero-card__image"
+                                        />
+                                    </div>
+                                    <div class="hero-card__content">
+                                        <span class="hero-card__title"
+                                            >Pet Health</span
+                                        >
+                                        <div class="hero-card__desc"></div>
+                                    </div>
+                                </div>
+                                <div class="hero-card__body">
+                                    <div
+                                        class="hero-card__thumb hero-card__thumb--2"
+                                    >
+                                        <img
+                                            src="./assets/img/dog-hero-card-2.png"
+                                            alt="Dog"
+                                            class="hero-card__image"
+                                        />
+                                    </div>
+                                    <div class="hero-card__content">
+                                        <span class="hero-card__title"
+                                            >Pet care</span
+                                        >
+                                        <div class="hero-card__desc"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </figure>
+                        <section class="hero__body">
+                            <h1 class="hero__heading">
+                                Established & Trusted Pet Care Service
+                            </h1>
+                            <p class="hero__desc">
+                                Discover a wide variety of Pawsitive services to
+                                choose from, including daycare, private walks,
+                                office duty and spa.
+                            </p>
+                            <div class="hero__cta">
+                                <a href="#!" class="hero__btn btn">
+                                    <span>Book a Meet</span>
+                                    <div class="btn__arrow">
+                                        <img
+                                            src="./assets/img/arrow-right.svg"
+                                            alt="Arrow"
+                                        />
+                                    </div>
+                                </a>
+                                <a href="#!" class="hero__link">
+                                    Schedule a Call
+                                </a>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </body>
 </html>
