--- a/index.html
+++ b/index.html
@@ -1320,7 +1320,7 @@
                 <div class="footer-social">
                     <span class="footer-social__title">Follow Us</span>
                     <div class="footer-social__icons">
-                        <a href="" class="footer-social__icon">
+                        <a href="#!" class="footer-social__icon">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 width="32"
@@ -1398,7 +1398,7 @@
                                 </defs>
                             </svg>
                         </a>
-                        <a href="" class="footer-social__icon">
+                        <a href="#!" class="footer-social__icon">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 width="32"
@@ -1476,7 +1476,7 @@
                                 </defs>
                             </svg>
                         </a>
-                        <a href="" class="footer-social__icon">
+                        <a href="#!" class="footer-social__icon">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 width="32"
@@ -1554,7 +1554,7 @@
                                 </defs>
                             </svg>
                         </a>
-                        <a href="" class="footer-social__icon">
+                        <a href="#!" class="footer-social__icon">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
                                 width="32"
